gcc/testsuite/gcc.c-torture/compile/pr16566-1.c
@@ -1,0 +1,15 @@
+/* ICE with flexible arrays in non-lvalue structures.  Bug 16566
+   (comment #3).  */
+
+struct S;
+
+struct C {
+    int i;
+    struct S *tab[];
+};
+
+struct S { struct C c; };
+
+void foo (struct S *x) {
+  foo(((void)1, x->c).tab[0]);
+}
